# kittens_exhibition

./: README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini
apps/kittens/: admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  test_kittens.py  urls.py  views.py
apps/kittens/migrations/: 0001_initial.py  0002_populate_initial_data.py
apps/kittens/tests/: test_views.py
config/: settings.py  swagger_urls.py  urls.py
